// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton checked should render an disabled radio button 1`] = `
<Radio
  checked={true}
  className="some-class"
  disabled={false}
  id="RadioButton-name-value"
  label="This is a label"
  name="name"
  otherProp="other"
  value="value"
/>
`;

exports[`RadioButton checked should render an enabled radio button 1`] = `
<Radio
  checked={true}
  className="some-class"
  disabled={true}
  id="RadioButton-name-value"
  label="This is a label"
  name="name"
  otherProp="other"
  value="value"
/>
`;

exports[`RadioButton unchecked should render an disabled radio button 1`] = `
<Radio
  checked={false}
  className="some-class"
  disabled={false}
  id="RadioButton-name-value"
  label="This is a label"
  name="name"
  otherProp="other"
  value="value"
/>
`;

exports[`RadioButton unchecked should render an enabled radio button 1`] = `
<Radio
  checked={false}
  className="some-class"
  disabled={true}
  id="RadioButton-name-value"
  label="This is a label"
  name="name"
  otherProp="other"
  value="value"
/>
`;
